--- a/ENIGMA_game/2D_10.vcxproj.filters
+++ b/ENIGMA_game/2D_10.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClCompile Include="model.cpp">
       <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//</Filter>
     </ClCompile>
+    <ClCompile Include="bathgimmick.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="input.h">
@@ -331,6 +334,9 @@
     </ClInclude>
     <ClInclude Include="model.h">
       <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//</Filter>
+    </ClInclude>
+    <ClInclude Include="bathgimmick.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
