--- a/ENIGMA_game/2D_10.vcxproj.filters
+++ b/ENIGMA_game/2D_10.vcxproj.filters
@@ -118,6 +118,9 @@
     <Filter Include="ソース ファイル\--++|    GAME   |++--\MoneyboxGimmick">
       <UniqueIdentifier>{e2c53ea8-1ea1-48ed-ab67-4f6ace037e53}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\--++|    GAME   |++--\BathGimmick">
+      <UniqueIdentifier>{e2d6c787-38bf-4efa-ae52-b89e06d62c67}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="input.cpp">
@@ -226,7 +229,7 @@
       <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//</Filter>
     </ClCompile>
     <ClCompile Include="bathgimmick.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\--++|    GAME   |++--\BathGimmick</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -336,7 +339,7 @@
       <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//</Filter>
     </ClInclude>
     <ClInclude Include="bathgimmick.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ソース ファイル\--++|    GAME   |++--\BathGimmick</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
