--- a/ENIGMA_game/2D_10.vcxproj.filters
+++ b/ENIGMA_game/2D_10.vcxproj.filters
@@ -94,8 +94,14 @@
     <Filter Include="ソース ファイル\--++|    GAME   |++--\//Stage%28Arrangements%29//\SPEECH BUBBLE">
       <UniqueIdentifier>{c65b9626-4c64-4b5b-a190-5590bde21151}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\+||||-ALL_SYSTEM-||||+\TEXT">
+      <UniqueIdentifier>{a0ad713f-c288-4405-8b77-3a048038cabe}</UniqueIdentifier>
+    </Filter>
     <Filter Include="ソース ファイル\--++|    GAME   |++--\//Stage%28Arrangements%29//\WALL">
       <UniqueIdentifier>{6c0bd580-d924-41ef-8085-ae2f44d016bf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\--++|    GAME   |++--\//3D_Model//\DEBUGMODEL">
+      <UniqueIdentifier>{709e84b6-2d6c-4f78-96f5-91e241509d71}</UniqueIdentifier>
     </Filter>
     <Filter Include="ソース ファイル\%2aMODEL_SET_SAVE_LODE%2a">
       <UniqueIdentifier>{96eded80-0e67-4263-8be3-6667fd50ce16}</UniqueIdentifier>
@@ -114,12 +120,6 @@
     </Filter>
     <Filter Include="ソース ファイル\--++|    GAME   |++--\//GAME_SYSTEM//\BathGimmick">
       <UniqueIdentifier>{3db95dfe-61cc-4abf-ad8f-f8c9fec2750d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソース ファイル\--++|    GAME   |++--\//3D_Model//\PLAYER-1\DEBUGMODEL">
-      <UniqueIdentifier>{709e84b6-2d6c-4f78-96f5-91e241509d71}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソース ファイル\--++|    GAME   |++--\TEXT">
-      <UniqueIdentifier>{a0ad713f-c288-4405-8b77-3a048038cabe}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -196,13 +196,13 @@
       <Filter>ソース ファイル\--++|    GAME   |++--\//Stage%28Arrangements%29//\SPEECH BUBBLE</Filter>
     </ClCompile>
     <ClCompile Include="text.cpp">
-      <Filter>ソース ファイル\--++|    GAME   |++--\TEXT</Filter>
+      <Filter>ソース ファイル\+||||-ALL_SYSTEM-||||+\TEXT</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="DebugModel.cpp">
-      <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//\PLAYER-1\DEBUGMODEL</Filter>
+      <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//\DEBUGMODEL</Filter>
     </ClCompile>
     <ClCompile Include="Model_Set_Save_Lode.cpp">
       <Filter>ソース ファイル\%2aMODEL_SET_SAVE_LODE%2a</Filter>
@@ -312,10 +312,10 @@
       <Filter>ソース ファイル\--++|    GAME   |++--\//Stage%28Arrangements%29//\SPEECH BUBBLE</Filter>
     </ClInclude>
     <ClInclude Include="text.h">
-      <Filter>ソース ファイル\--++|    GAME   |++--\TEXT</Filter>
+      <Filter>ソース ファイル\+||||-ALL_SYSTEM-||||+\TEXT</Filter>
     </ClInclude>
     <ClInclude Include="DebugModel.h">
-      <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//\PLAYER-1\DEBUGMODEL</Filter>
+      <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//\DEBUGMODEL</Filter>
     </ClInclude>
     <ClInclude Include="Model_Set_Save_Lode.h">
       <Filter>ソース ファイル\%2aMODEL_SET_SAVE_LODE%2a</Filter>
