最新版ダウンロード

--- a/ENIGMA_game/2D_10.vcxproj
+++ b/ENIGMA_game/2D_10.vcxproj
@@ -150,7 +150,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Actionzone.cpp" />
+    <ClCompile Include="advanced_motion_model.cpp" />
     <ClCompile Include="bathgimmick.cpp" />
+    <ClCompile Include="simple_motion_model.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="DebugModel.cpp" />
     <ClCompile Include="fade.cpp" />
@@ -189,7 +191,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actionzone.h" />
+    <ClInclude Include="advanced_motion_model.h" />
     <ClInclude Include="bathgimmick.h" />
+    <ClInclude Include="simple_motion_model.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="DebugModel.h" />
     <ClInclude Include="fade.h" />
