--- a/ENIGMA_game/2D_10.vcxproj
+++ b/ENIGMA_game/2D_10.vcxproj
@@ -187,7 +187,7 @@
     <ClCompile Include="text.cpp" />
     <ClCompile Include="title.cpp" />
     <ClCompile Include="transfergate.cpp" />
-    <ClCompile Include="trap.cpp" />
+    <ClCompile Include="eyetrap.cpp" />
     <ClCompile Include="Tutorial.cpp" />
     <ClCompile Include="stage.cpp" />
   </ItemGroup>
@@ -230,7 +230,7 @@
     <ClInclude Include="text.h" />
     <ClInclude Include="title.h" />
     <ClInclude Include="transfergate.h" />
-    <ClInclude Include="trap.h" />
+    <ClInclude Include="eyetrap.h" />
     <ClInclude Include="Tutorial.h" />
     <ClInclude Include="stage.h" />
   </ItemGroup>
