--- a/ENIGMA_game/2D_10.vcxproj
+++ b/ENIGMA_game/2D_10.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{37d653f0-b41a-4f86-b1a5-2bf94092eb00}</ProjectGuid>
     <RootNamespace>My2D10</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>3D_10</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -152,10 +153,15 @@
     <ClCompile Include="Actionzone.cpp" />
     <ClCompile Include="advanced_motion_model.cpp" />
     <ClCompile Include="bathgimmick.cpp" />
+    <ClCompile Include="corkboard.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="enemy_view.cpp" />
     <ClCompile Include="eyetrap.cpp" />
+    <ClCompile Include="Film.cpp" />
     <ClCompile Include="hitcollision_mistake_prevention.cpp" />
+    <ClCompile Include="map.cpp" />
+    <ClCompile Include="menu.cpp" />
+    <ClCompile Include="MenuFrame.cpp" />
     <ClCompile Include="simple_motion_model.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="DebugModel.cpp" />
@@ -197,10 +203,15 @@
     <ClInclude Include="Actionzone.h" />
     <ClInclude Include="advanced_motion_model.h" />
     <ClInclude Include="bathgimmick.h" />
+    <ClInclude Include="corkboard.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="enemy_view.h" />
     <ClInclude Include="eyetrap.h" />
+    <ClInclude Include="Film.h" />
     <ClInclude Include="hitcollision_mistake_prevention.h" />
+    <ClInclude Include="map.h" />
+    <ClInclude Include="menu.h" />
+    <ClInclude Include="MenuFrame.h" />
     <ClInclude Include="simple_motion_model.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="DebugModel.h" />
