--- a/ENIGMA_game/2D_10.vcxproj
+++ b/ENIGMA_game/2D_10.vcxproj
@@ -198,6 +198,7 @@
     <ClCompile Include="transfergate.cpp" />
     <ClCompile Include="Tutorial.cpp" />
     <ClCompile Include="stage.cpp" />
+    <ClCompile Include="TV.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actionzone.h" />
@@ -248,6 +249,7 @@
     <ClInclude Include="transfergate.h" />
     <ClInclude Include="Tutorial.h" />
     <ClInclude Include="stage.h" />
+    <ClInclude Include="TV.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
