--- a/ENIGMA_game/2D_10.vcxproj.filters
+++ b/ENIGMA_game/2D_10.vcxproj.filters
@@ -291,6 +291,9 @@
     <ClCompile Include="enemy_view.cpp">
       <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//\ENEMY</Filter>
     </ClCompile>
+    <ClCompile Include="TV.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="input.h">
@@ -436,6 +439,9 @@
     </ClInclude>
     <ClInclude Include="enemy_view.h">
       <Filter>ソース ファイル\--++|    GAME   |++--\//3D_Model//\ENEMY</Filter>
+    </ClInclude>
+    <ClInclude Include="TV.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
