--- a/ENIGMA_game/2D_10.vcxproj.filters
+++ b/ENIGMA_game/2D_10.vcxproj.filters
@@ -300,6 +300,9 @@
     <ClCompile Include="Icon.cpp">
       <Filter>ソース ファイル\--++|    MENU   |++--\Icon</Filter>
     </ClCompile>
+    <ClCompile Include="angleUI.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="input.h">
@@ -451,6 +454,9 @@
     </ClInclude>
     <ClInclude Include="Icon.h">
       <Filter>ソース ファイル\--++|    MENU   |++--\Icon</Filter>
+    </ClInclude>
+    <ClInclude Include="angleUI.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
